--- a/app/config.json
+++ b/app/config.json
@@ -1,3 +1,1 @@
-{
-  "serviceName": "Service name goes here"
-}
+{ "serviceName": "Service name goes here", "useNjkExtensions": true, "showPrereleases": true }
