--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
-    "dev": "govuk-prototype-kit dev",
+    "dev": "npx govuk-prototype-kit dev",
     "serve": "govuk-prototype-kit serve",
-    "start": "govuk-prototype-kit start"
+    "start": "npx govuk-prototype-kit start"
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "1.2.1",
     "@x-govuk/edit-prototype-in-browser": "^0.2.0",
     "govuk-frontend": "4.7.0",
-    "govuk-prototype-kit": "13.11.0"
+    "govuk-prototype-kit": "13.9"
   }
 }
